# -Computer-Graphics-Project

./: .gitignore  CMakeLists.txt  Cube.docx  README.md  progress.md  מה אנחנו רוצות לעשות.docx
ext/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/fancy_app/: CMakeLists.txt  app.h  main.cpp
src/libs/: CMakeLists.txt
src/libs/gui/: CMakeLists.txt
src/libs/gui/imgui_widgets/: SliderDouble.cpp  implot.cpp  implot_items.cpp
src/libs/gui/imgui_widgets/include/imgui_widgets/: SliderDouble.h  imfilebrowser.h  implot_helper.h
src/libs/gui/include/gui/: application.h  camera.h  fancy3dapp.h  guiMath.h  mesh.h  model.h  plots.h  renderer.h  shader.h  shadow_map_fbo.h
src/libs/gui/shaders/: basic_lighting.vert  compute_shading.frag  compute_shadow_factor.frag  mine1.geom  poisson_sample  render_shadow.frag  render_shadow.vert  silhouette.frag  silhouette1.geom  silhouette2.vert
src/libs/gui/src/: application.cpp  fancy3dapp.cpp  mesh.cpp  model.cpp  shadow_map_fbo.cpp
src/libs/utils/: CMakeLists.txt
src/libs/utils/include/utils/: geoms.h  json_helpers.h  logger.h  mathDefs.h  mathUtils.h  trajectory.h
src/libs/utils/src/: logger.cpp
